# pathfinders

./: .coveragerc  .gitignore  Dockerfile  GiftCalculatorTechnicalDeepDive.base64  GiftCalculatorTechnicalDeepDive.rtf  README.md  appspec.yml  buildspec.yml  codebuild-secrets-policy.json  codepipeline-role.json  conftest.py  create_missing_tables.py  deploy.sh  deployment.md  docker-compose.yml  fix_migrations.py  gift-calculator-explanation.md  manage.py  manage_local.py  package-lock.json  package.json  pathfinders.conf  project_plan.md  pyproject.toml  pytest.ini  requirements.txt  run_fastapi.py  tailwind.config.js  technical-gift-calc.md  ~$ftCalculatorTechnicalDeepDive.rtf
.codegpt/: head
assessments/: admin.py  gift_calculator.py  models.py  serializers.py  urls.py  views.py
books/: models.py  serializers.py  services.py  views.py
core/: services.py  test_fastapi.py  views.py
counselors/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
fastapi_app/: gift_api.py  main.py  models.py
info_docs/: MOTIVATIONAL GIFTS.docx  Motivational Gifts Assessment Questionnaire.docx  Pathfinders Website Info 1.docx  Revised Career Questions Table.docx
pathfinders-client/: dev.js  next.config.js  package-lock.json  package.json  tailwind.config.js
pathfinders_project/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
scripts/: after_install.sh  before_install.sh  start_application.sh  validate_service.sh
templates/: _not-found.html  _not-found.js  _not-found.rsc  _not-found_client-reference-manifest.js  dashboard.html  dashboard.rsc  index.rsc  (+8 more)
(+169 files in other folders)
