[tool.poetry]
name = "pathfinders"
version = "0.1.0"
description = "Spiritual Gift Assessment Platform"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 