[tool.poetry]
name = "pathfinders"
version = "0.1.0"
description = "Identify Your God given  Gifts According to Romans 12:6-8, and find be best career that matches your gifts"
authors = ["Emmanuel Amankrah Kwofie <amankrahkwame@gmail.com>", "Rev. Dr. Edem Tettey <drtetteyedem@gmail.com>"]
packages = [
    { include = "pathfinders_project" },
    { include = "core" },
    { include = "assessments" },
    { include = "fastapi_app" }
]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"
fastapi = "^0.109.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.26.0"
gunicorn = "^21.2.0"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 